{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 40,
  "lineage": "f28714cb-239a-18fc-8b17-788ebbde4b84",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "haproxy_0_external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.142.49.147",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-16T02:29:53.632-07:00",
            "id": "projects/coral-pipe-457011-d2/regions/europe-west2/addresses/kafka-cluster-haproxy-0-external-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "kafka-cluster-haproxy-0-external-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "coral-pipe-457011-d2",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/regions/europe-west2/addresses/kafka-cluster-haproxy-0-external-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "haproxy_1_external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.39.32.183",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-16T02:29:53.640-07:00",
            "id": "projects/coral-pipe-457011-d2/regions/europe-west2/addresses/kafka-cluster-haproxy-1-external-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "kafka-cluster-haproxy-1-external-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "coral-pipe-457011-d2",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/regions/europe-west2/addresses/kafka-cluster-haproxy-1-external-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "haproxy_2_external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.142.121.229",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-16T02:29:53.572-07:00",
            "id": "projects/coral-pipe-457011-d2/regions/europe-west2/addresses/kafka-cluster-haproxy-2-external-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "kafka-cluster-haproxy-2-external-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "coral-pipe-457011-d2",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/regions/europe-west2/addresses/kafka-cluster-haproxy-2-external-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_haproxy_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9093",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-16T02:30:12.727-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coral-pipe-457011-d2/global/firewalls/kafka-cluster-allow-haproxy-external",
            "log_config": [],
            "name": "kafka-cluster-allow-haproxy-external",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
            "priority": 1000,
            "project": "coral-pipe-457011-d2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/firewalls/kafka-cluster-allow-haproxy-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "haproxy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kafka_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_haproxy_to_kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9093"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-16T02:30:17.232-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coral-pipe-457011-d2/global/firewalls/kafka-cluster-allow-haproxy-to-kafka",
            "log_config": [],
            "name": "kafka-cluster-allow-haproxy-to-kafka",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
            "priority": 1000,
            "project": "coral-pipe-457011-d2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/firewalls/kafka-cluster-allow-haproxy-to-kafka",
            "source_ranges": [
              "10.4.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-node",
              "kafka-cluster"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kafka_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-16T02:30:09.362-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coral-pipe-457011-d2/global/firewalls/kafka-cluster-allow-internal",
            "log_config": [],
            "name": "kafka-cluster-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
            "priority": 1000,
            "project": "coral-pipe-457011-d2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/firewalls/kafka-cluster-allow-internal",
            "source_ranges": [
              "10.0.0.0/24",
              "10.1.0.0/16",
              "10.2.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kafka_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_haproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-16T02:30:16.965-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coral-pipe-457011-d2/global/firewalls/kafka-cluster-allow-internal-haproxy",
            "log_config": [],
            "name": "kafka-cluster-allow-internal-haproxy",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
            "priority": 1000,
            "project": "coral-pipe-457011-d2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/firewalls/kafka-cluster-allow-internal-haproxy",
            "source_ranges": [
              "10.4.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-node",
              "kafka-cluster"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kafka_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_haproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2234"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-16T02:30:15.624-07:00",
            "deny": [],
            "description": "Allow SSH access to HAProxy VM on custom port 2234",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coral-pipe-457011-d2/global/firewalls/kafka-cluster-allow-ssh-haproxy",
            "log_config": [],
            "name": "kafka-cluster-allow-ssh-haproxy",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
            "priority": 1000,
            "project": "coral-pipe-457011-d2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/firewalls/kafka-cluster-allow-ssh-haproxy",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "haproxy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kafka_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "haproxy_0_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250615",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/zones/europe-west2-a/disks/kafka-cluster-haproxy-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/coral-pipe-457011-d2/zones/europe-west2-a/instances/kafka-cluster-haproxy-0",
            "instance_id": "7575880593005762174",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE",
              "ssh-keys": "stephenzhou:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7lBLPrpZQ2/3vHYo1bp8srdbBBtmOsfZd6VVKZIQK09lR0GcczpAyaxGGK9XFVieaV8L/+q9semwfxzGsspIcfNO8lHY41af6GQ6Dz+71rM9h9baLEQJsfdf1hHuR4LOl4EvPFhOOGA9wNYp5wVJ7MNHmH8qNxQDXze7PXdJqVR8FPPdbE+c5E35qm7/1APtodCMRCI4OzMrdGte6oVsupQQQswE8704qbW5OyHjJd2rlvUtgPPpJ097xxqDjG/iQFYjG4kUlCq0rTyx+IePL0ItbvT86MRfJlRwWB0hrveGf0NT8V8ARyeI2DGAuN5+al3xESTsG6yLmlSlwa3LJZ85rgyciDeFRcp1Teq58sbfgUVAJguGNDCiMuKsx5LluEcE4ECniXsHk4yPcZTlNu8uS7SrvxtLhJIQOH [...]
            },
            "metadata_fingerprint": "h-AGYCQrngs=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y haproxy dnsutils telnet\n\n# 修改SSH端口到2234\ncp /etc/ssh/sshd_config /etc/ssh/sshd_config.backup\nsed -i '/^Port /d' /etc/ssh/sshd_config\nsed -i '/^#Port /d' /etc/ssh/sshd_config\necho \"Port 2234\" \u003e\u003e /etc/ssh/sshd_config\nsystemctl restart sshd\n\n# 创建HAProxy配置\ncat \u003e /etc/haproxy/haproxy.cfg \u003c\u003c 'HAPROXY_CONFIG'\nglobal\n    daemon\n    log stdout local0\n    chroot /var/lib/haproxy\ [...]
            "name": "kafka-cluster-haproxy-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.142.49.147",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
                "network_ip": "10.4.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/regions/europe-west2/subnetworks/kafka-cluster-haproxy-public-subnet",
                "subnetwork_project": "coral-pipe-457011-d2"
              }
            ],
            "project": "coral-pipe-457011-d2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/zones/europe-west2-a/instances/kafka-cluster-haproxy-0",
            "service_account": [
              {
                "email": "kafka-cluster-haproxy@coral-pipe-457011-d2.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "haproxy",
              "haproxy-0",
              "kafka-proxy"
            ],
            "tags_fingerprint": "XXPckeB6ntc=",
            "zone": "europe-west2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.haproxy_0_external_ip",
            "google_compute_network.kafka_vpc",
            "google_compute_subnetwork.haproxy_public_subnet",
            "google_compute_subnetwork.kafka_subnet",
            "google_dns_managed_zone.kafka_private_zone",
            "google_project_service.compute_api",
            "google_project_service.dns_api",
            "google_service_account.haproxy_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "haproxy_1_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250615",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/zones/europe-west2-b/disks/kafka-cluster-haproxy-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/coral-pipe-457011-d2/zones/europe-west2-b/instances/kafka-cluster-haproxy-1",
            "instance_id": "5350994259872994942",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE",
              "ssh-keys": "stephenzhou:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7lBLPrpZQ2/3vHYo1bp8srdbBBtmOsfZd6VVKZIQK09lR0GcczpAyaxGGK9XFVieaV8L/+q9semwfxzGsspIcfNO8lHY41af6GQ6Dz+71rM9h9baLEQJsfdf1hHuR4LOl4EvPFhOOGA9wNYp5wVJ7MNHmH8qNxQDXze7PXdJqVR8FPPdbE+c5E35qm7/1APtodCMRCI4OzMrdGte6oVsupQQQswE8704qbW5OyHjJd2rlvUtgPPpJ097xxqDjG/iQFYjG4kUlCq0rTyx+IePL0ItbvT86MRfJlRwWB0hrveGf0NT8V8ARyeI2DGAuN5+al3xESTsG6yLmlSlwa3LJZ85rgyciDeFRcp1Teq58sbfgUVAJguGNDCiMuKsx5LluEcE4ECniXsHk4yPcZTlNu8uS7SrvxtLhJIQOH [...]
            },
            "metadata_fingerprint": "XvHR7QH9g4Q=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y haproxy dnsutils telnet\n\n# 修改SSH端口到2234\ncp /etc/ssh/sshd_config /etc/ssh/sshd_config.backup\nsed -i '/^Port /d' /etc/ssh/sshd_config\nsed -i '/^#Port /d' /etc/ssh/sshd_config\necho \"Port 2234\" \u003e\u003e /etc/ssh/sshd_config\nsystemctl restart sshd\n\n# 创建HAProxy配置\ncat \u003e /etc/haproxy/haproxy.cfg \u003c\u003c 'HAPROXY_CONFIG'\nglobal\n    daemon\n    log stdout local0\n    chroot /var/lib/haproxy\ [...]
            "name": "kafka-cluster-haproxy-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.39.32.183",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
                "network_ip": "10.4.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/regions/europe-west2/subnetworks/kafka-cluster-haproxy-public-subnet",
                "subnetwork_project": "coral-pipe-457011-d2"
              }
            ],
            "project": "coral-pipe-457011-d2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/zones/europe-west2-b/instances/kafka-cluster-haproxy-1",
            "service_account": [
              {
                "email": "kafka-cluster-haproxy@coral-pipe-457011-d2.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "haproxy",
              "haproxy-1",
              "kafka-proxy"
            ],
            "tags_fingerprint": "nhtVjz0xyTw=",
            "zone": "europe-west2-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.haproxy_1_external_ip",
            "google_compute_network.kafka_vpc",
            "google_compute_subnetwork.haproxy_public_subnet",
            "google_compute_subnetwork.kafka_subnet",
            "google_dns_managed_zone.kafka_private_zone",
            "google_project_service.compute_api",
            "google_project_service.dns_api",
            "google_service_account.haproxy_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "haproxy_2_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250615",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/zones/europe-west2-c/disks/kafka-cluster-haproxy-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/coral-pipe-457011-d2/zones/europe-west2-c/instances/kafka-cluster-haproxy-2",
            "instance_id": "2536302058213103229",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE",
              "ssh-keys": "stephenzhou:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7lBLPrpZQ2/3vHYo1bp8srdbBBtmOsfZd6VVKZIQK09lR0GcczpAyaxGGK9XFVieaV8L/+q9semwfxzGsspIcfNO8lHY41af6GQ6Dz+71rM9h9baLEQJsfdf1hHuR4LOl4EvPFhOOGA9wNYp5wVJ7MNHmH8qNxQDXze7PXdJqVR8FPPdbE+c5E35qm7/1APtodCMRCI4OzMrdGte6oVsupQQQswE8704qbW5OyHjJd2rlvUtgPPpJ097xxqDjG/iQFYjG4kUlCq0rTyx+IePL0ItbvT86MRfJlRwWB0hrveGf0NT8V8ARyeI2DGAuN5+al3xESTsG6yLmlSlwa3LJZ85rgyciDeFRcp1Teq58sbfgUVAJguGNDCiMuKsx5LluEcE4ECniXsHk4yPcZTlNu8uS7SrvxtLhJIQOH [...]
            },
            "metadata_fingerprint": "oomIMu7Jzvc=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y haproxy dnsutils telnet\n\n# 修改SSH端口到2234\ncp /etc/ssh/sshd_config /etc/ssh/sshd_config.backup\nsed -i '/^Port /d' /etc/ssh/sshd_config\nsed -i '/^#Port /d' /etc/ssh/sshd_config\necho \"Port 2234\" \u003e\u003e /etc/ssh/sshd_config\nsystemctl restart sshd\n\n# 创建HAProxy配置\ncat \u003e /etc/haproxy/haproxy.cfg \u003c\u003c 'HAPROXY_CONFIG'\nglobal\n    daemon\n    log stdout local0\n    chroot /var/lib/haproxy\ [...]
            "name": "kafka-cluster-haproxy-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.142.121.229",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
                "network_ip": "10.4.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/regions/europe-west2/subnetworks/kafka-cluster-haproxy-public-subnet",
                "subnetwork_project": "coral-pipe-457011-d2"
              }
            ],
            "project": "coral-pipe-457011-d2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/zones/europe-west2-c/instances/kafka-cluster-haproxy-2",
            "service_account": [
              {
                "email": "kafka-cluster-haproxy@coral-pipe-457011-d2.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "haproxy",
              "haproxy-2",
              "kafka-proxy"
            ],
            "tags_fingerprint": "gzHLg4-c5zo=",
            "zone": "europe-west2-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.haproxy_2_external_ip",
            "google_compute_network.kafka_vpc",
            "google_compute_subnetwork.haproxy_public_subnet",
            "google_compute_subnetwork.kafka_subnet",
            "google_dns_managed_zone.kafka_private_zone",
            "google_project_service.compute_api",
            "google_project_service.dns_api",
            "google_service_account.haproxy_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "kafka_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
            "mtu": 0,
            "name": "kafka-cluster-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4204201527568653051",
            "project": "coral-pipe-457011-d2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc"
          },
          "dependencies": [
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "kafka_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-16T02:30:16.333-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/coral-pipe-457011-d2/regions/europe-west2/routers/kafka-cluster-router",
            "name": "kafka-cluster-router",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
            "project": "coral-pipe-457011-d2",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/regions/europe-west2/routers/kafka-cluster-router"
          },
          "dependencies": [
            "google_compute_network.kafka_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "kafka_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "coral-pipe-457011-d2/europe-west2/kafka-cluster-router/kafka-cluster-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "kafka-cluster-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "coral-pipe-457011-d2",
            "region": "europe-west2",
            "router": "kafka-cluster-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.kafka_vpc",
            "google_compute_router.kafka_router",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "haproxy_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-16T02:30:10.665-07:00",
            "gateway_address": "10.4.0.1",
            "id": "projects/coral-pipe-457011-d2/regions/europe-west2/subnetworks/kafka-cluster-haproxy-public-subnet",
            "ip_cidr_range": "10.4.0.0/24",
            "name": "kafka-cluster-haproxy-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coral-pipe-457011-d2",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/regions/europe-west2/subnetworks/kafka-cluster-haproxy-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.kafka_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "kafka_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-16T02:30:17.750-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/coral-pipe-457011-d2/regions/europe-west2/subnetworks/kafka-cluster-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "kafka-cluster-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/global/networks/kafka-cluster-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coral-pipe-457011-d2",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-pipe-457011-d2/regions/europe-west2/subnetworks/kafka-cluster-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.kafka_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    }
  ]
}